# ufraw

./: .cvsignore  .gitignore  Doxyfile  MANIFEST  Makefile.am  README  README-documentation.txt  README-processing.txt  TODO  autogen.sh  beautify_style.sh  blackbody.h  configure.ac  curveeditor_widget.c  curveeditor_widget.h  dcraw.c  dcraw.cc  dcraw.h  dcraw_api.c  dcraw_api.cc  dcraw_api.h  dcraw_indi.c  generate_schemas.sh  gimp-2.0.pc  gimpui-2.0.pc  iccjpeg.c  iccjpeg.h  nikon_curve.c  nikon_curve.h  uf_glib.h  uf_gtk.cc  uf_gtk.h  uf_progress.h  ufobject.cc  ufobject.h  ufraw-batch.c  ufraw-gimp.c  ufraw-mime.xml  ufraw-setup.iss.in  ufraw.appdata.xml  (+27 more)
icons/: .cvsignore  Makefile.am
po/: .cvsignore  Makefile.in.in  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  ko.po  nb.po  nl.po  no.po  pl.po  pt.po  ru.po  sr.po  sr@latin.po  sv.po  ufraw.pot  zh_CN.po  zh_TW.po
